<resources>
    <string name="app_name">MindfullnessNewDesign</string>
    <string name="mindfullness">Mindfulness</string>
    <string name="skip">Skip</string>
    <string name="mindfullness_meditation">Mindfulness\nmeditation</string>
    <string name="mindfullness_description">Mindfullness meditation is just one of many types of meditation, and it promotes presence in the now through focusing on breathing</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mindfullness_description_2">It is a way of living your life, its basic concepts are awareness, openess and presence in the here and now</string>
    <string name="meditation">Meditation</string>
    <string name="mindfullness_description_3">On the other hand, meditation is a technique used by many(including the mindfulness school of thought) to achieve an elevated state of mind</string>
    <string name="get_started">Get started</string>
    <string name="whats_on_mind">What\'s on your\nmind?</string>
    <string name="choose_an_option">Choose an option for now.You can explore other options later</string>
    <string name="manage_anxiety">Manage anxiety and stress</string>
    <string name="sleep_soundly">Sleeping soundly</string>
    <string name="being_active">being more active</string>
    <string name="something_new">Try something new</string>
    <string name="stay_focused">Staying focused</string>
    <string name="learn_meditation">Learn to meditate</string>
    <string name="invest_growth">Invest in personal growth</string>
    <string name="feeling_now">Let\'s see how you\nare feeling now</string>
    <string name="take_a_moment">Take a moment to check with yourself.How are you feeling?</string>
    <string name="very_relaxed">Very relaxed</string>
    <string name="relaxed">Relaxed</string>
    <string name="tense">Tense</string>
    <string name="thats_good">That\'s good news</string>
    <string name="option_suggestion_sample">Learning the right breathing techniques can help you feel more connected to youur body by bringing awareness away from the worrie in your head.\nIf you force your mind back to breathing, you are missing out on the whole point of meditation: self acceptance and achieving a heightened sense of consciousness.</string>
    <string name="try_basic">Try a basic exercise now</string>
    <string name="basic">Basic</string>
    <string name="course">Course</string>
    <string name="sample_duration">3-10 min</string>
    <string name="learn_fundamentals">Learn the fundamentals of meditation</string>
    <string name="maybe_later">Maybe later</string>
    <string name="home">Home</string>
    <string name="meditate">Meditate</string>
    <string name="discover">Discover</string>
    <string name="profile">My Profile</string>
    <string name="feeling_today">How are you feeling today?</string>
    <string name="daily_exercises">Daily exercises</string>
    <string name="morning_coffee">Morning Coffee</string>
    <string name="sample_description">learn the fundamentals of \nmeditation</string>
    <string name="challenging_times">For challenging times</string>
    <string name="memotional_care">Emotional care for processing world tragedies and injustices</string>
    <string name="recommended">Recommended</string>
    <string name="all">All</string>
    <string name="relax">Relax</string>
    <string name="sleep">Sleep</string>
    <string name="focus">Focus</string>
    <string name="music">Music</string>
    <string name="kids">Kids</string>
    <string name="quick_n_easy">Quick and easy</string>
    <string name="searchbar_hint">Search</string>
    <string name="john_doe">John Doe</string>
    <string name="doe_email">john.doe@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="favorites">Favorites</string>
    <string name="help_center">Help Center</string>
    <string name="Terms_n_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faq">FAQs</string>
    <string name="log_out"><![CDATA[Log Out.]]></string>
    <string name="become_member">Become a member!</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="forgot_password">forgot password?</string>
    <string name="sign_up"><u>sign up instead</u></string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up_">Sign up</string>
</resources>