<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/accent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_destinations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:singleSelection="true"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAll"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="@color/accent_lighter"
                android:clickable="true"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:focusable="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipRelax"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="@color/accent_lighter"
                android:clickable="true"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relax"
                android:focusable="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSleep"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="@color/accent_lighter"
                android:clickable="true"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep"
                android:focusable="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFocus"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="@color/accent_lighter"
                android:clickable="true"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/focus"
                android:focusable="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMusic"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="@color/accent_lighter"
                android:clickable="true"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/_5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:focusable="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipKids"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="@color/accent_lighter"
                android:clickable="true"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/_5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kids"
                android:focusable="true" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15dp"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/all"
            android:textSize="@dimen/_18sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/chip_destinations"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/all_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_8dp"
            android:paddingEnd="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/quick_n_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15dp"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/quick_n_easy"
            android:textSize="@dimen/_18sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/all_recycler"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/easy_items_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_8dp"
            android:paddingEnd="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@+id/quick_n_easy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>