<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.main.onboarding.OnboardingFragment"
    android:id="@+id/main">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parentView"
            android:background="@color/accent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thats_good"
                android:textColor="@color/white"
                android:textSize="@dimen/_25sp"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginStart="@dimen/_15dp"
                android:textAlignment="center"
                android:maxLines="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/btn_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/_15dp"
                app:layout_constraintTop_toTopOf="@+id/page_title"
                app:layout_constraintBottom_toBottomOf="@+id/page_title"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/page_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/option_suggestion_sample"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sp"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="@dimen/_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/page_title" />

            <TextView
                android:id="@+id/exercise_suggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/try_basic"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sp"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="@dimen/_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/page_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>